# toa_animator

./: Cargo.toml  README.md
src/: anim.rs  format.rs  lib.rs  state.rs
src/state/: anim_state.rs  mod.rs  state_machine.rs
